Add sweet alerts for like and dislike in explore, 2 demo explores

--- a/exploreDemoMeat.html
+++ b/exploreDemoMeat.html
@@ -99,7 +99,7 @@
         <form>
             <div class="form-group" style="align-content: center">
                 <label for="exampleInputEmail1">My Journey's Title</label>
-                <input class="form-control" id="journeysTitle" type="text" placeholder="Enter Journey's Title" required>
+                <input class="form-control" id="journeysTitle" type="text" value="Meat Lover" required>
             </div>
             <button type=" cancel" class="btn btn-secondary float-left">Cancel</button>
             <button type="submit" class="btn btn-success float-right">Save</button>
@@ -114,7 +114,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="chickenJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="chickenJourney">
                 <img src="images/products/chicken.jpg" class="card-img-top food" alt="Chicken">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Chicken</h5>
@@ -122,7 +122,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="kleftikoJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="kleftikoJourney">
                 <img src="images/products/kleftiko.jpg" class="card-img-top food" alt="Kleftiko">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Kleftiko</h5>
@@ -211,7 +211,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="souvlakiJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="souvlakiJourney">
                 <img src="images/products/souvlaki.jpg" class="card-img-top food" alt="Souvlaki">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Souvlaki</h5>
@@ -235,7 +235,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="gyrosJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="gyrosJourney">
                 <img src="images/products/gyros.jpg" class="card-img-top food" alt="Gyros">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Gyros</h5>
@@ -371,7 +371,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="sweetsourJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="sweetsourJourney">
                 <img src="images/products/sweetandsour.jpg" class="card-img-top food" alt="Sweet & Sour">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Sweet & Sour</h5>
@@ -379,7 +379,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="steakJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="steakJourney">
                 <img src="images/products/steak.jpg" class="card-img-top food" alt="Steak">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Steak</h5>
@@ -395,7 +395,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="ribsJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="ribsJourney">
                 <img src="images/products/ribs.jpg" class="card-img-top food" alt="BBQ Ribs">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">BBQ Ribs</h5>
@@ -403,7 +403,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="friedchickenJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="friedchickenJourney">
                 <img src="images/products/friedchicken.jpeg" class="card-img-top food" alt="Fried Chicken">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Fried Chicken</h5>
@@ -419,7 +419,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="porkchopJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="porkchopJourney">
                 <img src="images/products/porkchop.jpg" class="card-img-top food" alt="Pork Chop">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Pork Chop</h5>
@@ -443,7 +443,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="kebapJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="kebapJourney">
                 <img src="images/products/kebap.jpg" class="card-img-top food" alt="Kebap">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Kebap</h5>
