--- a/exploreDemoMom.html
+++ b/exploreDemoMom.html
@@ -99,7 +99,7 @@
         <form>
             <div class="form-group" style="align-content: center">
                 <label for="exampleInputEmail1">My Journey's Title</label>
-                <input class="form-control" id="journeysTitle" type="text" placeholder="Enter Journey's Title" required>
+                <input class="form-control" id="journeysTitle" type="text" value="Meat Lover" required>
             </div>
             <button type=" cancel" class="btn btn-secondary float-left">Cancel</button>
             <button type="submit" class="btn btn-success float-right">Save</button>
@@ -122,7 +122,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="kleftikoJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="kleftikoJourney">
                 <img src="images/products/kleftiko.jpg" class="card-img-top food" alt="Kleftiko">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Kleftiko</h5>
@@ -323,7 +323,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="agkinaresJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="agkinaresJourney">
                 <img src="images/products/agkinares.jpg" class="card-img-top food" alt="Agkinares">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Agkinares</h5>
@@ -339,7 +339,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="kounoupidiJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="kounoupidiJourney">
                 <img src="images/products/kounoupidi.jpg" class="card-img-top food" alt="Kounoupidi">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Kounoupidi</h5>
@@ -347,7 +347,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="beansJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="beansJourney">
                 <img src="images/products/beans.jpg" class="card-img-top food" alt="Beans">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Beans</h5>
@@ -363,7 +363,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="koupepiaJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="koupepiaJourney">
                 <img src="images/products/koupepia.jpg" class="card-img-top food" alt="Koupepia">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Koupepia</h5>
@@ -387,7 +387,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="villagesaladJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="villagesaladJourney">
                 <img src="images/products/village_salad.jpg" class="card-img-top food" alt="Village Salad">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Village Salad</h5>
@@ -411,7 +411,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="lasagnaJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="lasagnaJourney">
                 <img src="images/products/lasagna.jpg" class="card-img-top food" alt="Lasagna">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Lasagna</h5>
@@ -427,7 +427,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="gemistaJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="gemistaJourney">
                 <img src="images/products/gemista.jpg" class="card-img-top food" alt="Gemista">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Gemista</h5>
@@ -435,7 +435,7 @@
                             class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="card explore_card text-white bg-dark" id="halloumiJourney" hidden>
+            <div class="card explore_card text-white bg-dark" id="halloumiJourney">
                 <img src="images/products/halloumi.jpg" class="card-img-top food" alt="Halloumi">
                 <div class="card-body explore_card_body">
                     <h5 class="card-title float-left">Halloumi</h5>
