--- a/dislikes.html
+++ b/dislikes.html
@@ -22,6 +22,8 @@
     <!-- Optional: include a polyfill for ES6 Promises for IE11 -->
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="sweetalert2.min.js"></script>
+    <script src="scripts/script.js"></script>
     <script src="scripts/script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -284,7 +286,7 @@
                 <div class="card explore_card">
                     <img src="images/products/salad.jpg" class="card-img-top food" alt="Salad">
                     <div class="card-body explore_card_body">
-                        <h5 class="card-title" style="text-align: center">Burger</h5>
+                        <h5 class="card-title" style="text-align: center">Salad</h5>
                         <p class="card-text" style="text-align: center">Fresh Salad!</p>
                         <button class="btn btn-danger float-right" onclick="hideElement('saladCard')"><i
                                 class="fa fa-trash" aria-hidden="true"></i></button>
@@ -450,7 +452,7 @@
                     <img src="images/products/koupepia.jpg" class="card-img-top food" alt="Koupepia">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Koupepia</h5>
-                        <p class="card-text" style="text-align: center">Delicous roll!</p>
+                        <p class="card-text" style="text-align: center">Delicious roll!</p>
                         <button class="btn btn-danger float-right" onclick="hideElement('koupepiaCard')"><i
                                 class="fa fa-trash" aria-hidden="true"></i></button>
                     </div>
